--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "tienda-virtual",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Proyecto de tienda virtual usando Node.js, Express y MongoDB",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "author": "Tu Nombre",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
@@ -18,5 +19,12 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
-  }
+  },
+  "keywords": [
+    "nodejs",
+    "express",
+    "mongodb",
+    "tienda-virtual"
+  ]
 }
+
